subprojects/swen430/src/test/resources/tests/valid/StringAssign_Valid_9.while
void main() {
    [{string f}] foo = [{f: "hello"}];
    foo[0].f[0] = 'z';
    print foo;
}

