subprojects/swen430/src/test/resources/tests/invalid/Break_Invalid_8.while
string foo(int x) {
    if (true) {
        break;
    } else {
        break;
    }

    return "foo";
}

void main() {
    print foo(1);
}

